--- a/share/man/man4/man4.vax/Attic/uu.4
+++ b/share/man/man4/man4.vax/Attic/uu.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uu.4,v 1.6 2002/10/15 11:59:02 deraadt Exp $
+.\"	$OpenBSD: uu.4,v 1.7 2003/03/06 10:11:00 hugh Exp $
 .\"	$NetBSD: uu.4,v 1.3 1996/03/03 17:14:14 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
