--- a/share/man/man4/man4.vax/Attic/vp.4
+++ b/share/man/man4/man4.vax/Attic/vp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vp.4,v 1.7 2002/06/30 21:45:25 deraadt Exp $
+.\"	$OpenBSD: vp.4,v 1.8 2003/03/06 09:17:02 jmc Exp $
 .\"	$NetBSD: vp.4,v 1.3 1996/03/03 17:14:16 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
