--- a/share/man/man4/man4.vax/dhu.4
+++ b/share/man/man4/man4.vax/dhu.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dhu.4,v 1.5 2001/11/13 13:54:26 mpech Exp $
+.\"	$OpenBSD$
 .\"	$NetBSD: dhu.4,v 1.4 1996/03/05 15:28:48 ragge Exp $
 .\"
 .\" Copyright (c) 1985, 1991 Regents of the University of California.
