--- a/share/man/man4/man4.vax/vsbus.4
+++ b/share/man/man4/man4.vax/vsbus.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vsbus.4,v 1.2 2003/03/06 17:25:19 jason Exp $
+.\"	$OpenBSD: vsbus.4,v 1.3 2003/03/06 17:30:06 jason Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -44,7 +44,7 @@ driver supports the internal I/O bus found on VAXstation systems.
 .Sh SUPPORTED DEVICES
 The following devices are supported on
 .Nm vsbus .
-.Bl -tag -width uba(4) -compact -offset indent
+.Bl -tag -width asc(4) -compact -offset indent
 .It Xr asc 4
 NCR 53c94 SCSI controller.
 .It Xr dz 4
