--- a/share/man/man4/man4.sparc/tvtwo.4
+++ b/share/man/man4/man4.sparc/tvtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tvtwo.4,v 1.1 2003/03/05 14:42:08 miod Exp $
+.\"	$OpenBSD: tvtwo.4,v 1.2 2003/03/06 21:54:41 miod Exp $
 .\" Copyright (c) 2003 Miodrag Vallat.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -61,7 +61,8 @@ interface.
 .Xr tcx 4 ,
 .Xr vigra 4 ,
 .Xr wscons 4 ,
-.Xr wsdisplay 4
+.Xr wsdisplay 4 ,
+.Xr zx 4 ,
 .Xr boot_config 8 ,
 .Xr config 8
 .Sh CAVEATS
