--- a/share/man/man4/man4.sparc/Attic/p9k.4
+++ b/share/man/man4/man4.sparc/Attic/p9k.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: p9k.4,v 1.1 2003/06/17 21:21:31 miod Exp $
+.\"	$OpenBSD: p9k.4,v 1.2 2003/06/18 08:47:27 deraadt Exp $
 .\"
 .\" Copyright (c) 2003, Miodrag Vallat.
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
