--- a/share/man/man5/login.conf.5
+++ b/share/man/man5/login.conf.5
@@ -30,7 +30,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $OpenBSD: login.conf.5,v 1.29 2003/06/06 13:28:13 jmc Exp $
+.\" $OpenBSD: login.conf.5,v 1.30 2003/06/21 21:57:58 dhartmei Exp $
 .\" BSDI $From: login.conf.5,v 2.20 2000/06/26 14:50:38 prb Exp $
 .\"
 .Dd June 18, 2001
@@ -448,7 +448,7 @@ authentication style and if that fails use the same password with the
 .Li passwd
 authentication style.
 See
-.Xr kerberos 1 .
+.Ql info heimdal .
 .\"
 .It Li lchpass
 Change user's local password.
