--- a/share/man/man7/mdoc.7
+++ b/share/man/man7/mdoc.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mdoc.7,v 1.27 2003/06/02 23:30:15 millert Exp $
+.\"	$OpenBSD: mdoc.7,v 1.28 2003/07/21 11:50:54 jmc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -264,7 +264,7 @@ columns below.
 .Pp
 Unless stated, manual domain macros share a common syntax:
 .Pp
-.Dl \&.Va argument [\ .\ ,\ ;\ :\ (\ )\ [\ ]\ argument \...\ ]
+.Dl \&.Va argument [\ .\ ,\ ;\ :\ ?\ !\ (\ )\ [\ ]\ argument \...\ ]
 .Pp
 .Sy Note :
 Opening and closing
