--- a/share/man/man4/man4.sparc/pninek.4
+++ b/share/man/man4/man4.sparc/pninek.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: p9k.4,v 1.2 2003/06/18 08:47:27 deraadt Exp $
+.\"	$OpenBSD: pninek.4,v 1.1 2003/06/18 17:40:31 miod Exp $
 .\"
 .\" Copyright (c) 2003, Miodrag Vallat.
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
@@ -33,7 +33,7 @@
 .Nd Weitek Power9000 accelerated frame buffer
 .Sh SYNOPSIS
 .Cd "btcham0 at obio?"
-.Cd "pninek at sbus? slot ? offset ?"
+.Cd "pninek0 at sbus? slot ? offset ?"
 .Cd "wsdisplay* at pninek?"
 .Sh DESCRIPTION
 The
