--- a/share/man/man5/remote.5
+++ b/share/man/man5/remote.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: remote.5,v 1.12 2003/06/02 23:30:14 millert Exp $
+.\"	$OpenBSD: remote.5,v 1.13 2003/06/06 13:28:13 jmc Exp $
 .\"	$NetBSD: remote.5,v 1.4 1997/04/20 00:05:27 mellon Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -204,6 +204,16 @@ The default frame size is equal to
 .It Sy \&hd
 (bool)
 The host uses half-duplex communication, local echo should be performed.
+.It Sy \&hf
+(bool)
+Initialize the
+.Xr tip 1
+variable
+.Dq hardwareflow
+to
+.Sy on ,
+so that hardware flow control (CRTSCTS) will be used for the
+connection with the remote host.
 .It Sy \&ie
 (str)
 Input end-of-file marks.
