--- a/share/man/man4/man4.sparc/auxreg.4
+++ b/share/man/man4/man4.sparc/auxreg.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD$
+.\"     $OpenBSD: auxreg.4,v 1.1 2003/06/20 03:18:42 jason Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .Os
 .Sh NAME
 .Nm auxreg
-.Nd SPARC auxilliary register
+.Nd SPARC auxiliary register
 .Sh SYNOPSIS
 .Cd "auxreg0 at mainbus0                          " Pq "sun4c"
 .Cd "auxreg0 at obio0                             " Pq "sun4m"
