--- a/share/man/man4/man4.sparc64/auxio.4
+++ b/share/man/man4/man4.sparc64/auxio.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: auxio.4,v 1.1 2003/06/20 03:26:19 jason Exp $
+.\"     $OpenBSD: auxio.4,v 1.2 2003/06/20 18:21:43 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .Os
 .Sh NAME
 .Nm auxio
-.Nd SPARC64 auxilliary I/O
+.Nd SPARC64 auxiliary I/O
 .Sh SYNOPSIS
 .Cd "auxio* at ebus?"
 .Cd "auxio* at sbus? slot ? offset ?"
