--- a/share/man/man4/man4.sparc64/le.4
+++ b/share/man/man4/man4.sparc64/le.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: le.4,v 1.5 2002/10/01 21:03:27 miod Exp $
+.\"	$OpenBSD: le.4,v 1.6 2003/06/02 23:30:14 millert Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -71,7 +71,6 @@ addresses on the local network.
 .Pp
 Different cards and machines have different kinds of connectors,
 as follows:
-.Pp
 .Bl -tag -width xxxxxxxxxxxxxxxxxxxx
 .It AUI/DIX
 Standard 15 pin connector
