--- a/share/man/man4/man4.sparc64/spif.4
+++ b/share/man/man4/man4.sparc64/spif.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: spif.4,v 1.8 2003/06/02 18:51:34 jason Exp $
+.\"     $OpenBSD: spif.4,v 1.9 2003/06/06 10:29:42 jmc Exp $
 .\"
 .\" Copyright (c) 1999-2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -45,7 +45,6 @@ and the
 Cirrus Logic PPC2 parallel port controller.
 .Pp
 The device minor numbers for this driver are encoded as follows:
-.Pp
 .Bd -literal
     +---+---+---+---+---+---+---+---+
     | 7 | 6 | 5 | 4 | 3 | 2 | 1 | 0 |
