--- a/share/man/man4/man4.sparc/le.4
+++ b/share/man/man4/man4.sparc/le.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: le.4,v 1.15 2002/10/01 21:02:19 miod Exp $
+.\"	$OpenBSD: le.4,v 1.16 2003/06/02 23:30:13 millert Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -73,7 +73,6 @@ addresses on the local network.
 .Pp
 Different cards and machines have different kinds of connectors,
 as follows:
-.Pp
 .Bl -tag -width xxxxxxxxxxxxxxxxxxxx
 .It AUI/DIX
 Standard 15 pin connector
