--- a/share/man/man4/man4.sparc64/intro.4
+++ b/share/man/man4/man4.sparc64/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.27 2003/05/02 00:09:45 jason Exp $
+.\"     $OpenBSD: intro.4,v 1.28 2003/06/06 10:29:42 jmc Exp $
 .\"
 .\" Copyright (c) 2001-2002 The OpenBSD Project
 .\" All Rights Reserved.
@@ -156,7 +156,7 @@ bridge.
 .It Xr ti 4
 Alteon Networks Tigon I and II Gigabit Ethernet driver.
 .It Xr ubsec 4
-Bluesteelnet 5501/5601, Broadcom 5805/5820/5821 crytography accelerators.
+Bluesteelnet 5501/5601, Broadcom 5805/5820/5821 cryptography accelerators.
 .It Xr ukbd 4
 USB keyboard.
 .It Xr ums 4
