--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.124 2003/09/18 09:49:43 jmc Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.125 2003/10/26 15:11:47 jmc Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -1507,7 +1507,7 @@ likely to see a message like
 with the default process limits.
 .It Ev XMKMF
 Invocation of xmkmf for CONFIGURE_STYLE=imake port.
-Defaults to xmkf -a -DPorts.
+Defaults to xmkmf -a -DPorts.
 The -DPorts is specific to
 .Ox
 and is always appended.
