--- a/share/man/man7/mirroring-ports.7
+++ b/share/man/man7/mirroring-ports.7
@@ -1,4 +1,4 @@
-.\" $OpenBSD: mirroring-ports.7,v 1.10 2003/06/06 13:44:30 jmc Exp $
+.\" $OpenBSD: mirroring-ports.7,v 1.11 2003/07/31 10:53:50 espie Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -70,7 +70,7 @@ and
 .Ev F
 set on the command line, e.g.,
 .Bd -literal -offset indent
-cd mirror && make -j 5 -f path_to_makefile FETCH=fetch_script
+cd mirror && make -k -j 5 -f path_to_makefile FETCH=fetch_script
 .Ed
 .Pp
 Targets are set up so that each port is referenced by its full name, and
