--- a/share/man/man5/wsconsctl.conf.5
+++ b/share/man/man5/wsconsctl.conf.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: wsconsctl.conf.5,v 1.2 2001/08/25 20:25:33 mickey Exp $
+.\" $OpenBSD: wsconsctl.conf.5,v 1.3 2003/06/06 13:28:13 jmc Exp $
 .\"
 .\" Copyright (c) 2001 Brian J. Kifiak <bk@rt.fm>
 .\" All rights reserved.
@@ -46,7 +46,7 @@ during the boot sequence.
 The file is made up of
 .Xr wsconsctl 8
 variable assignments
-.Pq Ar variable Ns No = Ns Ar value
+.Pq Ar variable Ns = Ns Ar value
 with comments designated by a hash mark
 .Pq Sq # .
 .Sh FILES
