--- a/share/man/man4/man4.mvme88k/vme.4
+++ b/share/man/man4/man4.mvme88k/vme.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vme.4,v 1.1 2003/08/07 19:22:38 miod Exp $
+.\"	$OpenBSD: vme.4,v 1.2 2003/08/08 09:29:24 miod Exp $
 .\"
 .\" Copyright (c) 2003 Paul Weissmann
 .\" All rights reserved.
@@ -83,4 +83,4 @@ Support for RESET and ABORT switches
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr pcctwo 4
-\" .Xr syscon 4
+.\" .Xr syscon 4
