--- a/share/man/man5/genassym.cf.5
+++ b/share/man/man5/genassym.cf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: genassym.cf.5,v 1.5 2003/05/21 09:28:09 jmc Exp $
+.\"	$OpenBSD: genassym.cf.5,v 1.6 2004/02/01 13:13:35 miod Exp $
 .\"	$NetBSD: genassym.cf.5,v 1.8 2001/06/19 12:34:27 wiz Exp $
 .\"
 .\" Copyright (c) 1997 Matthias Pfaller.
@@ -113,7 +113,7 @@ being converted to upper case.
 .br
 is similar to the
 .Em struct
-command, but applies to an union instead of a struct.
+command, but applies to a union instead of a struct.
 .Pp
 .Em "config <ctype> <gcc constraint> <asm print modifier>"
 .br
