--- a/share/man/man5/hostname.if.5
+++ b/share/man/man5/hostname.if.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hostname.if.5,v 1.33 2003/06/06 13:28:13 jmc Exp $
+.\"	$OpenBSD: hostname.if.5,v 1.34 2003/09/02 18:37:08 jmc Exp $
 .\"	$NetBSD: hosts.5,v 1.4 1994/11/30 19:31:20 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -34,8 +34,7 @@
 .Dt HOSTNAME.IF 5
 .Os
 .Sh NAME
-.Nm hostname.if
-and
+.Nm hostname.if ,
 .Nm bridgename.if
 .Nd interface-specific configuration files
 .Sh DESCRIPTION
