--- a/share/man/man5/forward.5
+++ b/share/man/man5/forward.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: forward.5,v 1.4 2003/09/08 14:53:06 jmc Exp $
+.\"	$OpenBSD: forward.5,v 1.5 2003/09/09 08:43:09 jmc Exp $
 .\"
 .\"	Copyright (c) 2001 Marco S. Hyman
 .\"
@@ -14,7 +14,7 @@
 .Dt FORWARD 5
 .Os
 .Sh NAME
-.Nm .forward
+.Nm forward
 .Nd e-mail forwarding information file
 .Sh DESCRIPTION
 Users may put a file named
