--- a/bin/chmod/chown.8
+++ b/bin/chmod/chown.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: chown.8,v 1.4 2003/05/29 09:43:09 jmc Exp $
+.\"	$OpenBSD: chown.8,v 1.5 2003/06/02 23:32:06 millert Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -39,7 +39,7 @@
 .Nm chown
 .Oo
 .Fl R
-.Op Fl H | Fl L | Fl P
+.Op Fl H | L | P
 .Oc
 .Op Fl f
 .Op Fl h
@@ -48,7 +48,7 @@
 .Nm chown
 .Oo
 .Fl R
-.Op Fl H | Fl L | Fl P
+.Op Fl H | L | P
 .Oc
 .Op Fl f
 .Op Fl h
