--- a/bin/chmod/chgrp.1
+++ b/bin/chmod/chgrp.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: chgrp.1,v 1.4 2003/04/28 06:27:36 jmc Exp $
+.\"	$OpenBSD: chgrp.1,v 1.5 2003/06/02 23:32:06 millert Exp $
 .\"
 .\" Copyright (c) 1983, 1990, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -42,7 +42,7 @@
 .Nm chgrp
 .Oo
 .Fl R
-.Op Fl H | Fl L | Fl P
+.Op Fl H | L | P
 .Oc
 .Op Fl f
 .Op Fl h
