--- a/share/man/man5/stab.5
+++ b/share/man/man5/stab.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: stab.5,v 1.11 2003/06/02 23:30:14 millert Exp $
+.\"	$OpenBSD: stab.5,v 1.12 2003/06/06 13:28:13 jmc Exp $
 .\"	$NetBSD: stab.5,v 1.3 1994/11/30 19:31:33 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -46,7 +46,7 @@ file defines some of the symbol table
 field values for
 .Xr a.out 5
 files.
-These are the types for permanent symbols (i.e., not local labels, etc.)
+These are the types for permanent symbols (i.e., not local labels, etc.\&)
 used by the old debugger
 .Em sdb
 and the Berkeley Pascal compiler pc.
