--- a/share/man/man5/fs.5
+++ b/share/man/man5/fs.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fs.5,v 1.11 2003/06/02 23:30:14 millert Exp $
+.\"	$OpenBSD: fs.5,v 1.12 2003/06/06 13:28:13 jmc Exp $
 .\"	$NetBSD: fs.5,v 1.3 1994/11/30 19:31:17 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -39,7 +39,7 @@
 .Nd format of file system volume
 .Sh SYNOPSIS
 .Fd #include <sys/types.h>
-.Fd #include <ufs/ufs/fs.h>
+.Fd #include <ufs/ffs/fs.h>
 .Fd #include <ufs/ufs/inode.h>
 .Sh DESCRIPTION
 The files
