--- a/share/man/man4/man4.sparc/cgfourteen.4
+++ b/share/man/man4/man4.sparc/cgfourteen.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgfourteen.4,v 1.27 2003/06/18 17:40:31 miod Exp $
+.\"	$OpenBSD: cgfourteen.4,v 1.28 2003/07/09 13:26:20 jmc Exp $
 .\"	$NetBSD: cgfourteen.4,v 1.3 1998/06/11 08:32:20 fair Exp $
 .\"
 .\" Copyright (c) 1996 The President and Fellows of Harvard College.
@@ -149,6 +149,7 @@ with 4MB VSIMM.
 .Xr mgx 4 ,
 .Xr pninek 4 ,
 .Xr pnozz 4 ,
+.Xr rfx 4 ,
 .Xr tcx 4 ,
 .Xr tvtwo 4 ,
 .Xr vigra 4 ,
