--- a/bin/ksh/sh.1
+++ b/bin/ksh/sh.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sh.1tbl,v 1.44 2004/01/23 23:08:45 jmc Exp $
+.\"	$OpenBSD: sh.1tbl,v 1.45 2004/02/19 22:20:05 jmc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
 .\"     The Regents of the University of California.  All rights reserved.
@@ -365,7 +365,7 @@ to the standard input of the following command.
 The exit status of a pipeline is that of its last command.
 A pipeline may be prefixed by the
 .Ql \&!
-reversed word which causes the exit status of the pipeline to be logically
+reserved word which causes the exit status of the pipeline to be logically
 complemented: if the original status was 0 the complemented status will be 1;
 if the original status was not 0, the complemented status will be 0.
 .Pp
