--- a/usr.bin/grep/grep.1
+++ b/usr.bin/grep/grep.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: grep.1,v 1.21 2003/12/11 20:48:06 mcbride Exp $
+.\"	$OpenBSD: grep.1,v 1.22 2004/01/19 16:26:03 otto Exp $
 .\" Copyright (c) 1980, 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -270,7 +270,7 @@ enclosed in the brackets.
 .It Cm \&\e
 Escape special characters which have meaning to
 .Nm egrep ,
-the set of {$,.,^,[,],|,?,+,*,{,},(,)}.
+the set of `$.^[]|?+*{}()\e'.
 .El
 .Sh EXAMPLES
 To find all occurrences of the word patricia in a file:
