--- a/usr.bin/diff/diff.1
+++ b/usr.bin/diff/diff.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: diff.1,v 1.23 2004/01/07 17:19:05 otto Exp $
+.\" $OpenBSD: diff.1,v 1.24 2004/01/25 14:48:32 jmc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -284,6 +284,9 @@ on text files which are different.
 Binary files which differ,
 common subdirectories, and files which appear in only one directory
 are described as such.
+In directory mode only regular files and directories are compared.
+If a non-regular file such as a device special file or FIFO is
+encountered, a diagnostic message is printed.
 .Pp
 If only one of
 .Ar file1
