--- a/share/man/man4/man4.sparc64/openprom.4
+++ b/share/man/man4/man4.sparc64/openprom.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: openprom.4,v 1.7 2003/06/02 23:30:14 millert Exp $
+.\"	$OpenBSD: openprom.4,v 1.8 2003/06/06 10:29:42 jmc Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -125,7 +125,7 @@ the next name after the empty string is the first name.
 .Li /dev/openprom
 .Sh ERRORS
 The following may result in rejection of an operation:
-.Bl -tag -width Er
+.Bl -tag -width "[ENAMETOOLONG]"
 .It Bq Er EINVAL
 The given node number
 is not zero
