--- a/share/man/man4/man4.pegasos/Attic/autoconf.4
+++ b/share/man/man4/man4.pegasos/Attic/autoconf.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: autoconf.4,v 1.3 2002/09/26 22:11:49 miod Exp $
+.\"	$OpenBSD: autoconf.4,v 1.1 2003/11/08 16:55:37 miod Exp $
 .\"
 .\" Copyright (c) 1994 Christopher G. Demetriou
 .\" All rights reserved.
@@ -48,5 +48,5 @@ Devices which exist in the machine but are not configured into the
 kernel are usually not detected.
 .Sh SEE ALSO
 .Xr intro 4 ,
-.\" .Xr boot_pegasos 8 ,
+.Xr boot_pegasos 8 ,
 .Xr config 8
