--- a/share/man/man4/man4.vax/le.4
+++ b/share/man/man4/man4.vax/le.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: le.4,v 1.7 2003/03/06 20:02:40 jason Exp $
+.\"	$OpenBSD: le.4,v 1.8 2003/06/06 10:29:42 jmc Exp $
 .\"
 .\" Copyright (c) 2000 Brandon Creighton
 .\"
@@ -28,7 +28,7 @@
 .Os
 .Sh NAME
 .Nm le
-.Nd AMD 7990 LANCE ethernet device
+.Nd AMD LANCE Ethernet interface
 .Sh SYNOPSIS
 .Cd "le* at vsbus? csr 0x200e0000    " Pq "VAXstation onboard"
 .Cd "le* at ibus?                    " Pq "MicroVAX ibus"
