--- a/share/man/man4/man4.mvme88k/le.4
+++ b/share/man/man4/man4.mvme88k/le.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: le.4,v 1.1 2003/12/27 23:59:47 miod Exp $
+.\"	$OpenBSD: le.4,v 1.2 2003/12/30 21:27:14 miod Exp $
 .\"
 .\" Copyright (c) 2003 Paul Weissmann
 .\" All rights reserved.
@@ -30,7 +30,7 @@
 .Os
 .Sh NAME
 .Nm le
-.Nd MVME376 Ethernet Communications Controller
+.Nd MVME376 AMD LANCE Ethernet interface
 .Sh SYNOPSIS
 .Cd "le0 at vmes0 addr 0xffff1200 ipl 1 len 0x100"
 .Cd "le1 at vmes0 addr 0xffff1400 ipl 1 len 0x100"
