--- a/share/man/man4/man4.sparc64/le.4
+++ b/share/man/man4/man4.sparc64/le.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: le.4,v 1.7 2003/11/09 16:06:07 jmc Exp $
+.\"	$OpenBSD: le.4,v 1.8 2004/03/22 22:07:21 miod Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -38,7 +38,7 @@
 .Os
 .Sh NAME
 .Nm le
-.Nd SPARC64 AMD 7990 LANCE ethernet interface
+.Nd AMD LANCE Ethernet interface
 .Sh SYNOPSIS
 .Cd "ledma* at sbus? slot ? offset ?         " Pq onboard
 .Cd "le* at ledma*                           " Pq onboard
