--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.291 2004/02/04 19:38:30 jmc Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.292 2004/02/24 05:44:48 mcbride Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -1891,7 +1891,7 @@ upon.
 .Pp
 The fingerprints may be specified by operating system class, by
 version, or by subtype/patchlevel.
-The class of an operating system is typically the vender or genre
+The class of an operating system is typically the vendor or genre
 and would be OpenBSD for the
 .Xr pf 4
 firewall itself.
