--- a/share/man/man5/pf.os.5
+++ b/share/man/man5/pf.os.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.os.5,v 1.4 2003/08/28 09:41:23 jmc Exp $
+.\"	$OpenBSD: pf.os.5,v 1.5 2003/10/25 07:55:27 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Mike Frantzen <frantzen@w4g.org>
 .\"
@@ -160,7 +160,7 @@ exact same TCP options in the same order.
 .Pp
 The
 .Ar class
-field is the class, genre or vender of the operating system.
+field is the class, genre or vendor of the operating system.
 .Pp
 The
 .Ar version
