--- a/share/man/man4/man4.sparc/pnozz.4
+++ b/share/man/man4/man4.sparc/pnozz.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: pnozz.4,v 1.19 2003/06/18 17:40:31 miod Exp $
+.\"     $OpenBSD: pnozz.4,v 1.20 2004/02/29 21:44:07 miod Exp $
 .\"
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -37,13 +37,13 @@
 The
 .Nm
 is a color frame buffer with graphics acceleration, embedded in the
-.Tn "Tadpole SPARCbook"
+.Tn Tadpole SPARCbook
 3GS, 3GX, 3TX and 3XP
 laptops.
 It is based on the
-.Tn "Weitek Power9100"
+.Tn Weitek Power9100
 video processor and an
-.Tn "IBM RGB525"
+.Tn IBM RGB525
 RAMDAC.
 .Pp
 The
