--- a/bin/kill/kill.1
+++ b/bin/kill/kill.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: kill.1,v 1.23 2003/06/02 23:32:08 millert Exp $
+.\"	$OpenBSD: kill.1,v 1.24 2003/06/23 04:55:47 jmc Exp $
 .\"	$NetBSD: kill.1,v 1.8 1995/09/07 06:30:26 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -137,7 +137,6 @@ arguments.
 .Li $ kill -9 1234
 .Pp
 Forcibly terminate process ID 1234.
-.br
 .Pp
 .Li # kill -HUP `cat /var/run/inetd.pid`
 .Pp
