--- a/share/man/man5/hosts.equiv.5
+++ b/share/man/man5/hosts.equiv.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hosts.equiv.5,v 1.6 2001/08/02 18:49:08 mpech Exp $
+.\"	$OpenBSD: hosts.equiv.5,v 1.7 2002/05/06 23:34:33 millert Exp $
 .\"
 .\" Copyright (c) 1997 Todd Vierling
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
@@ -57,8 +57,7 @@ This mechanism bypasses password checks, and is required for access via
 .Xr rsh 1 .
 .Pp
 Each line of these files has the format:
-.Pp
-.Bd -unfilled -offset indent -compact
+.Bd -unfilled -offset indent
 hostname [username]
 .Ed
 .Pp
