--- a/bin/csh/USD.doc/csh.4
+++ b/bin/csh/USD.doc/csh.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: csh.4,v 1.2 1996/06/23 14:19:39 deraadt Exp $
+.\"	$OpenBSD: csh.4,v 1.3 2003/06/02 23:32:07 millert Exp $
 .\"	$NetBSD: csh.4,v 1.3 1995/03/21 09:03:39 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1993
@@ -105,8 +105,8 @@ at embedded blanks and tabs.
 Braces { ... } in argument expansion
 .PP
 Another form of filename expansion, alluded
-to before involves the characters `{' and `}'.
-These characters specify that the contained strings, separated by `,'
+to before, involves the characters `{' and `}'.
+These characters specify that the contained strings, separated by `,',
 are to be consecutively substituted into the containing characters
 and the results expanded left to right.
 Thus
