--- a/share/man/man7/mirroring-ports.7
+++ b/share/man/man7/mirroring-ports.7
@@ -1,4 +1,4 @@
-.\" $OpenBSD: mirroring-ports.7,v 1.11 2003/07/31 10:53:50 espie Exp $
+.\" $OpenBSD: mirroring-ports.7,v 1.12 2004/01/11 23:53:08 pvalchev Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -201,7 +201,7 @@ is unresponsive, the maintainer should use
 to provide some state to guard against shifting checksums.
 .Pp
 However, a more robust approach is also needed, so that ports users can
-depend on distfiles mirrors to carry what they need irregardless of those
+depend on distfiles mirrors to carry what they need irrespective of those
 synchronization issues.
 The
 .Pa link-checksums
