--- a/usr.bin/cksum/Attic/cksum.1
+++ b/usr.bin/cksum/Attic/cksum.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cksum.1,v 1.15 2003/06/03 02:56:06 millert Exp $
+.\"	$OpenBSD: cksum.1,v 1.16 2003/06/10 09:12:09 jmc Exp $
 .\"	$NetBSD: cksum.1,v 1.8 1995/09/02 05:45:15 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
