--- a/share/man/man4/man4.pegasos/Attic/mem.4
+++ b/share/man/man4/man4.pegasos/Attic/mem.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD$
+.\" $OpenBSD: mem.4,v 1.1 2003/11/08 16:55:37 miod Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
