--- a/share/man/man4/man4.mvme88k/pcctwo.4
+++ b/share/man/man4/man4.mvme88k/pcctwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pcctwo.4,v 1.2 2003/08/08 07:51:52 jmc Exp $
+.\"	$OpenBSD: pcctwo.4,v 1.3 2003/08/08 09:29:24 miod Exp $
 .\"
 .\" Copyright (c) 2003 Paul Weissmann
 .\" All rights reserved.
@@ -33,7 +33,7 @@
 .Nd PCCchip2 local bus controller
 .Sh SYNOPSIS
 .Cd "pcctwo0 at mainbus0 addr 0xfff00000        " Pq "MVME187"
-.Cd "pcctwo0 at bussw0 offset 0x42000           " Pq "MVME197"
+.Cd "pcctwo0 at bussw0 offset 0x00000           " Pq "MVME197"
 .Sh DESCRIPTION
 The
 .Nm
