--- a/share/man/man5/hostname.if.5
+++ b/share/man/man5/hostname.if.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hostname.if.5,v 1.36 2004/05/26 14:19:55 otto Exp $
+.\"	$OpenBSD: hostname.if.5,v 1.37 2004/05/29 17:54:46 jcs Exp $
 .\"	$NetBSD: hosts.5,v 1.4 1994/11/30 19:31:20 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -84,7 +84,7 @@ Other network setup:
 .Pp
 A typical file contains only one line, but more extensive files are possible,
 for example:
-.Bd -literal -offset indent
+.Bd -literal -offset 1n
 inet 10.0.1.12 255.255.255.0 10.0.1.255 media 100baseTX description Uplink
 inet alias 10.0.1.13 255.255.255.255 10.0.1.13
 inet alias 10.0.1.14 255.255.255.255 NONE
