--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.137 2004/05/27 09:12:21 jmc Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.138 2004/06/06 11:49:39 espie Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -414,7 +414,7 @@ See also
 .Ar link-categories .
 .It Ar update-patches
 Create or update patches for a port, using
-.Xr diff 1
+.Xr gdiff 1
 between
 .Pa file
 and
