--- a/share/man/man5/mk.conf.5
+++ b/share/man/man5/mk.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mk.conf.5,v 1.3 2003/05/10 18:20:30 jmc Exp $
+.\"	$OpenBSD: mk.conf.5,v 1.4 2003/08/27 07:58:35 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason McIntyre
 .\"
@@ -177,7 +177,7 @@ Add
 .Fl g
 to assembly, C compiler and linking passes.
 Also doesn't set
-.Ev STRIP
+.Ev INSTALL_STRIP
 to
 .Fl s
 per default if defined.
