--- a/share/man/man4/man4.sparc64/Attic/vgafb.4
+++ b/share/man/man4/man4.sparc64/Attic/vgafb.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vgafb.4,v 1.4 2002/10/01 21:03:28 miod Exp $
+.\"	$OpenBSD: vgafb.4,v 1.5 2003/06/02 18:51:34 jason Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -54,4 +54,5 @@ accelerated access methods are provided to
 .Xr intro 4 ,
 .Xr pci 4 ,
 .Xr wscons 4 ,
-.Xr wsdisplay 4
+.Xr wsdisplay 4 ,
+.Xr zx 4
