--- a/share/man/man4/man4.sparc64/bwtwo.4
+++ b/share/man/man4/man4.sparc64/bwtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bwtwo.4,v 1.3 2003/03/10 20:11:36 miod Exp $
+.\"	$OpenBSD: bwtwo.4,v 1.4 2003/06/02 18:51:34 jason Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -55,4 +55,5 @@ interface.
 .Xr sbus 4 ,
 .Xr vgafb 4 ,
 .Xr wscons 4 ,
-.Xr wsdisplay 4
+.Xr wsdisplay 4 ,
+.Xr zx 4
