--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.139 2004/06/06 20:45:36 xsa Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.140 2004/06/06 21:54:59 jmc Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -414,7 +414,7 @@ See also
 .Ar link-categories .
 .It Ar update-patches
 Create or update patches for a port, using
-.Xr gdiff 1
+.Xr diff 1
 between
 .Pa file
 and
