--- a/share/man/man4/man4.sparc64/creator.4
+++ b/share/man/man4/man4.sparc64/creator.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: creator.4,v 1.14 2003/06/06 10:29:42 jmc Exp $
+.\"	$OpenBSD: creator.4,v 1.15 2004/06/20 18:20:51 miod Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -65,6 +65,7 @@ this acceleration can be disabled.
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr intro 4 ,
+.Xr rfx 4 ,
 .Xr upa 4 ,
 .Xr vgafb 4 ,
 .Xr wscons 4 ,
