--- a/share/man/man4/man4.sparc64/cgsix.4
+++ b/share/man/man4/man4.sparc64/cgsix.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgsix.4,v 1.10 2003/07/09 13:26:20 jmc Exp $
+.\"	$OpenBSD: cgsix.4,v 1.11 2004/06/20 18:20:51 miod Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -146,6 +146,7 @@ on the GX+.
 .Xr cgthree 4 ,
 .Xr creator 4 ,
 .Xr intro 4 ,
+.Xr rfx 4 ,
 .Xr sbus 4 ,
 .Xr vgafb 4 ,
 .Xr wscons 4 ,
