--- a/share/man/man4/man4.sparc64/zx.4
+++ b/share/man/man4/man4.sparc64/zx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: zx.4,v 1.10 2004/02/29 21:44:07 miod Exp $
+.\"	$OpenBSD: zx.4,v 1.1 2004/06/20 18:20:51 miod Exp $
 .\" Copyright (c) 2003 Miodrag Vallat.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -95,6 +95,7 @@ The selected resolutions are:
 .Xr cgthree 4 ,
 .Xr creator 4 ,
 .Xr intro 4 ,
+.Xr rfx 4 ,
 .Xr sbus 4 ,
 .Xr vgafb 4 ,
 .Xr wscons 4 ,
