--- a/share/man/man4/man4.sparc64/intro.4
+++ b/share/man/man4/man4.sparc64/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.29 2003/11/14 18:32:46 jmc Exp $
+.\"     $OpenBSD: intro.4,v 1.30 2004/06/20 20:54:24 miod Exp $
 .\"
 .\" Copyright (c) 2001-2002 The OpenBSD Project
 .\" All Rights Reserved.
@@ -127,6 +127,9 @@ Hifn 6500 public key cryptography engine.
 Parallel port driver.
 .It Xr magma 4
 MAGMA serial/parallel communication boards.
+.It Xr mgx 4
+.Tn Southland Media Systems
+MGX and MGXPlus frame buffers.
 .It Xr openprom 4
 Sun Open boot PROM (what became IEEE 1275) configuration driver.
 .It Xr pckbd 4
