--- a/share/man/man4/man4.sparc64/bwtwo.4
+++ b/share/man/man4/man4.sparc64/bwtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bwtwo.4,v 1.6 2004/06/20 20:53:28 miod Exp $
+.\"	$OpenBSD: bwtwo.4,v 1.7 2004/06/20 21:31:02 miod Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -48,6 +48,7 @@ but makes its functions available via the internal
 .Xr wsdisplay 4
 interface.
 .Sh SEE ALSO
+.Xr agten 4 ,
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr creator 4 ,
