--- a/share/man/man4/man4.sparc64/fhc.4
+++ b/share/man/man4/man4.sparc64/fhc.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: fhc.4,v 1.1 2004/09/22 21:51:45 jason Exp $
+.\"     $OpenBSD: fhc.4,v 1.2 2004/09/23 18:28:51 jason Exp $
 .\"
 .\" Copyright (c) 2004 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -42,9 +42,29 @@ found on Sunfire, Starfire, and Wildfire
 UltraSPARC systems.
 These devices are used for board level
 functions on these systems.
+This device also controls an LED for each slot.
+This LED can be made to blink based on the load average on most systems
+by setting the
+.Xr sysctl 3
+variable
+.Ar machdep.led_blink
+to a non-zero value.
+.Sh HARDWARE
+.Ox
+includes the following
+.Nm
+drivers, sorted by driver name:
+.Bl -tag -width 13n -offset ind -compact
+.It Xr clkbrd 4
+Main system clock for E4500.
+.It Xr clock 4 
+Realtime clock.
+.It Xr zs/zstty/zskbd 4
+Zilog 8530 serial controller (and serial keyboards).
+.El
 .Sh SEE ALSO
+.Xr sysctl 3 ,
 .Xr central 4 ,
-.Xr clock 4 ,
 .Xr intro 4
 .Sh HISTORY
 .Ox
