--- a/share/man/man4/man4.sparc64/agten.4
+++ b/share/man/man4/man4.sparc64/agten.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: agten.4,v 1.2 2004/06/26 11:24:14 jmc Exp $
+.\"	$OpenBSD: agten.4,v 1.3 2004/09/30 19:59:27 mickey Exp $
 .\" Copyright (c) 2003 Miodrag Vallat.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -56,6 +56,9 @@ interface.
 .Xr mgx 4 ,
 .Xr rfx 4 ,
 .Xr sbus 4 ,
+.Xr tvtwo 4 ,
+.Xr vgafb 4 ,
+.Xr vigra 4 ,
 .Xr wscons 4 ,
 .Xr wsdisplay 4 ,
 .Xr zx 4
