--- a/share/man/man4/man4.zaurus/Attic/obio.4
+++ b/share/man/man4/man4.zaurus/Attic/obio.4
@@ -1,4 +1,4 @@
-.\" 	$OpenBSD: obio.4,v 1.1 2005/01/04 16:39:13 miod Exp $
+.\" 	$OpenBSD: obio.4,v 1.2 2005/01/04 22:29:22 jmc Exp $
 .\" 
 .\" Copyright (c) 2005, Miodrag Vallat.
 .\" All rights reserved.
