--- a/share/man/man4/man4.sparc64/creator.4
+++ b/share/man/man4/man4.sparc64/creator.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: creator.4,v 1.18 2004/06/21 04:43:41 miod Exp $
+.\"	$OpenBSD: creator.4,v 1.19 2004/11/29 18:12:50 miod Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -65,6 +65,7 @@ this acceleration can be disabled.
 .Xr bwtwo 4 ,
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
+.Xr cgtwelve 4 ,
 .Xr intro 4 ,
 .Xr mgx 4 ,
 .Xr rfx 4 ,
