--- a/sbin/ipsecctl/ipsecctl.8
+++ b/sbin/ipsecctl/ipsecctl.8
@@ -1,4 +1,4 @@
-.\"	$Id: ipsecctl.8,v 1.1.1.1 2005/02/02 21:31:54 hshoexer Exp $
+.\"	$OpenBSD:$
 .\"
 .\" The following requests are required for all man pages.
 .Dd Month DD, YYYY
