--- a/usr.bin/cvs/Attic/cvsd.conf.5
+++ b/usr.bin/cvs/Attic/cvsd.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cvsd.conf.5,v 1.3 2004/12/02 22:38:30 jmc Exp $
+.\"	$OpenBSD: cvsd.conf.5,v 1.4 2004/12/22 00:38:25 david Exp $
 .\"
 .\" Copyright (c) 2004 Jean-Francois Brousseau <jfb@openbsd.org>
 .\"
