--- a/usr.bin/cvs/Attic/rcs.1
+++ b/usr.bin/cvs/Attic/rcs.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rcs.1,v 1.1 2005/03/05 18:50:43 jfb Exp $
+.\"	$OpenBSD: rcs.1,v 1.2 2005/03/05 22:58:46 jmc Exp $
 .\"
 .\" Copyright (c) 2005 Jean-Francois Brousseau <jfb@openbsd.org>
 .\" All rights reserved.
