--- a/bin/pax/pax.1
+++ b/bin/pax/pax.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pax.1,v 1.46 2005/06/02 19:06:43 jaredy Exp $
+.\"	$OpenBSD: pax.1,v 1.47 2006/03/25 07:53:47 ray Exp $
 .\"	$NetBSD: pax.1,v 1.3 1995/03/21 09:07:37 cgd Exp $
 .\"
 .\" Copyright (c) 1992 Keith Muller.
@@ -314,7 +314,7 @@ bytes per write to the archive file.
 The
 .Ar blocksize
 must be a multiple of 512 bytes with a maximum of 64512 bytes.
-Archives larger than 32256 bytes violate the
+Archive block sizes larger than 32256 bytes violate the
 .Tn POSIX
 standard and will not be portable to all systems.
 A
