--- a/share/man/man5/hostname.if.5
+++ b/share/man/man5/hostname.if.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hostname.if.5,v 1.43 2006/01/09 21:34:57 jsg Exp $
+.\"	$OpenBSD: hostname.if.5,v 1.44 2006/05/23 13:38:49 jmc Exp $
 .\"	$NetBSD: hosts.5,v 1.4 1994/11/30 19:31:20 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -310,7 +310,7 @@ add fxp0
 add ep1
 -learn fxp0
 #
-!ipsecadm flush
+!ipsecctl -F
 #
 static fxp0 8:0:20:1e:2f:2b
 up    # and finally enable it
