--- a/sbin/ipsecctl/ipsec.conf.5
+++ b/sbin/ipsecctl/ipsec.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipsec.conf.5,v 1.42 2006/04/19 16:10:50 hshoexer Exp $
+.\"	$OpenBSD: ipsec.conf.5,v 1.43 2006/05/18 21:27:24 miod Exp $
 .\"
 .\" Copyright (c) 2004 Mathieu Sauve-Frankel  All rights reserved.
 .\"
@@ -631,8 +631,7 @@ ike dynamic esp from 192.168.62.0/24 to 192.168.48.0/20 peer 192.168.3.12
 .Xr tcp 4 ,
 .Xr isakmpd.conf 5 ,
 .Xr ipsecctl 8 ,
-.Xr isakmpd 8 ,
-.Xr vpn 8
+.Xr isakmpd 8
 .Sh HISTORY
 The
 .Nm
